force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/Apttus_Approval__AsyncActionInfo__c.object-meta.xml
<CustomObject>
    <description>Hold information of all actions that performed asynchronously.</description>
    <label>Async Action Info</label>
    <nameField>
        <displayFormat>ASYNC-{00000}</displayFormat>
        <label>ApprovalAsyncActionRec</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Actions Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>