force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__AsyncAction__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AsyncAction__c</fullName>
    <description>Approval action being performed asynchronously</description>
    <inlineHelpText>Approval action being performed asynchronously</inlineHelpText>
    <label>Async Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>