force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__BusinessObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BusinessObjectId__c</fullName>
    <description>ID of the associated business object</description>
    <inlineHelpText>ID of the associated business object</inlineHelpText>
    <label>Business Object</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>