force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__BusinessObjectIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BusinessObjectIds__c</fullName>
    <label>Business Object Ids</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>