force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__EndTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EndTime__c</fullName>
    <description>Async action processing end time</description>
    <inlineHelpText>Async action processing end time</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>