force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__ErrorMsgInfo2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ErrorMsgInfo2__c</fullName>
    <description>Information about the failure</description>
    <inlineHelpText>Information about the failure</inlineHelpText>
    <label>Error Msg Info2</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>