force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__ErrorMsgInfo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ErrorMsgInfo__c</fullName>
    <description>Information about the failure</description>
    <inlineHelpText>Information about the failure</inlineHelpText>
    <label>Error Msg Info (DEPRECATED)</label>
    <type>TextArea</type>
</CustomField>