force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__ErrorStackInfo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ErrorStackInfo__c</fullName>
    <description>Technical information about the failure. Error call stack and other related information</description>
    <inlineHelpText>Technical information about the failure. Error call stack and other related information</inlineHelpText>
    <label>Error Stack Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>