force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ObjectName__c</fullName>
    <description>Associate business object name</description>
    <inlineHelpText>Associate business object name</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>