force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__StartTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StartTime__c</fullName>
    <description>Async action processing start date time</description>
    <inlineHelpText>Async action processing start date time</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>