force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Status__c</fullName>
    <description>Async processing current status from the ApexJob table</description>
    <inlineHelpText>Async processing current status from the ApexJob table</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>