force-app/main/default/objects/Apttus_Approval__AsyncActionInfo__c/fields/Apttus_Approval__SubmitTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmitTime__c</fullName>
    <description>Async action submit time</description>
    <inlineHelpText>Async action submit time</inlineHelpText>
    <label>Submit Time</label>
    <type>DateTime</type>
</CustomField>